--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23"
   },
