--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
+    "@reduxjs/toolkit": "^2.2.2",
     "framer-motion": "^11.0.18",
     "next": "14.1.4",
     "react": "^18",
@@ -17,6 +18,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
