--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm i && next build",
+    "build": " next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,7 +12,7 @@
     "@nextui-org/react": "^2.2.10",
     "@reduxjs/toolkit": "^2.2.2",
     "framer-motion": "^11.0.18",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
